--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
@@ -16,17 +18,35 @@
 </head>
 <body>
 
-  We're coming soon
+  <header>
+    <img src="images/logo.svg" alt="Store Logo">
+  </header>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+  <figure>
+    <img src="images/hero-mobile.jpg" alt="Model">
+  </figure>
 
-  Email Address
+  <main>
+    <h1>
+      We're<br>coming soon
+    </h1>
+
+    <p>
+      Hello fellow shoppers! We're currently building our new fashion store.
+      Add your email below to stay up-to-date with announcements and our launch deals.
+    </p>
+
+    <form>
+      <input type="email" name="e-mail" placeholder="Email Address">
+      <button>></button>
+    </form>
+
+  </main>  
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Fabio Amaral</a>.
     </p>
   </footer>
 </body>
