--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
-
 </head>
 <body>
 
@@ -26,10 +25,10 @@
 
   <main>
     <h1>
-      We're<br>coming soon
+      <span id="We-re">We're</span> coming soon
     </h1>
 
-    <p>
+    <p id="paragraphMain">
       Hello fellow shoppers! We're currently building our new fashion store.
       Add your email below to stay up-to-date with announcements and our launch deals.
     </p>
@@ -37,13 +36,14 @@
     <form>
       <input type="email" name="e-mail" placeholder="Email Address">
       <button>></button>
+      <p id="errorMessage">Please provide a valid email</p>
+      <img src="images/icon-error.svg" id="errorMessageIcon" alt="Error Message Icon">
     </form>
-
   </main>  
   
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br> 
       Coded by <a href="#">Fabio Amaral</a>.
     </p>
   </footer>
