adding final html and css files :)

--- a/index.html
+++ b/index.html
@@ -15,40 +15,38 @@
 <body>
 <div class="container">
 
-  <div class="left">
-    <div class="innerContainer">
-    <header>
-      <img src="images/logo.svg" alt="Store Logo" class="logo">
-    </header>
+    <div class="left">
+          <div class="innerContainer">
+          <header>
+            <img src="images/logo.svg" alt="Store Logo" class="logo">
+          </header>
 
-    <figure>
-      <img src="images/hero-mobile.jpg" alt="Model" class="modelMobile">
-    </figure>
+          <figure>
+            <img src="images/hero-mobile.jpg" alt="Model" class="modelMobile">
+          </figure>
 
-      <h1>
-        <span id="We-re">We're</span> coming soon
-      </h1>
+            <h1>
+              <span id="We-re">We're</span> coming soon
+            </h1>
 
-      <p id="paragraphMain">
-        Hello fellow shoppers! We're currently building our new fashion store.
-        Add your email below to stay up-to-date with announcements and our launch deals.
-      </p>
+            <p id="paragraphMain">
+              Hello fellow shoppers! We're currently building our new fashion store.
+              Add your email below to stay up-to-date with announcements and our launch deals.
+            </p>
+            
+            <form class="form" id="form">
+              <input type="text" name="e-mail" placeholder="Email Address" id = "inputEmail" class="inputEmail">
+              <button class="buttonEmail" id="buttonEmail"><img src="images/icon-arrow.svg"></button>
+              <small class="errorMessage" id="errorMessage">Please provide a valid email</small>
+              <img src="images/icon-error.svg" class="errorIcon" id="errorIcon" alt="Error Message Icon">
+            </form>
 
-      <form>
-        <input type="email" name="e-mail" placeholder="Email Address">
-        <button><img src="images/icon-arrow.svg"></button>
-        <small id="errorMessageId" class=""></small>
-        <img src="images/icon-error.svg" id="errorIconId" class="errorIcon" alt="Error Message Icon">
-      </form>
-
+        </div>
   </div>
-  </div>
-    <div class="right modelDesktop"></div> 
+  
+  <div class="right modelDesktop"></div> 
 
 </div>
-
-
-
 
   <script src="script.js"></script>
 </body>
